gccida/g2/gen_aux_info_record
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_aux_info_record/src/c-aux-info.c:1042:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arguments; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_aux_info_record/src/c-aux-info.c:1052:6: error: use of undeclared identifier 'compiled_from_record_1'
if ( compiled_from_record_1++ ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_aux_info_record/src/obj/c-aux-info.o] Error 1
